# micro-service

./: README.md  test.js
.net/: README.md
.net/Common/: JsonExtensions.cs  WebApiClient.cs
.net/Consumer/ConsumerApi/: ConsumerService.csproj  ConsumerService.sln
.net/Gateway/Gateway/: Gateway.csproj  Program.cs  Startup.cs  (+1 more)
apisix/: Dockerfile  README.md  apisix.yaml  dashboard.yaml  test.http
dotnet/: README.md  test.http
dotnet/consumer/: Program.cs  Startup.cs  appsettings.json
dotnet/gateway/: Program.cs  appsettings.Development.json  gateway.csproj  ocelot.json
dotnet/provider/: Program.cs  Startup.cs  provider.csproj
dubbo/: README.md  pom.xml  test.http
dubbo/api/: pom.xml
dubbo/bff/: pom.xml
dubbo/consumer/: pom.xml
dubbo/provider/: pom.xml
golang/: README.md  docker-compose.yml  go.mod  go.sum  test.http
golang/bff/: go.mod  go.sum  main.go
golang/consumer/: Dockerfile  go.mod  go.sum  main.go
golang/provider/: Dockerfile  go.mod  go.sum  main.go
kreya/: grpc-test.krproj
proto/: consumer.proto  provider.proto
rust/: README.md  test.http
rust/bff/: Cargo.toml  build.rs
rust/bff/proto/: consumer.proto  provider.proto
rust/bff/src/: consumer.rs  main.rs  provider.rs
rust/consumer/: Cargo.toml  build.rs
rust/kreya/: test.krproj
rust/provider/: Cargo.toml  build.rs
servicemesh/: README.md  apisix.yaml  httpbin.yaml  httpbin2.yaml  k6.js  test.http  virtual-service.yaml
springcloud/: README.md  pom.xml  test.http
springcloud/consumer/: pom.xml
springcloud/gateway/: pom.xml
springcloud/provider/: pom.xml
(+39 files in other folders)
